[project]
name = "deterministic-inference"
version = "0.1.0"
description = "OpenAI-compatible proxy server for deterministic inference backends (SGLang, vLLM, etc.)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Jax", email = "jax@apus.network"}
]
license = {text = "MIT"}
keywords = ["inference", "openai", "sglang", "llm", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sglang>=0.5.3.post3",
    "gpustat>=1.1.1",
    "nvidia-ml-py>=12.535.108",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "openai>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
deterministic-inference-server = "deterministic_inference.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deterministic_inference"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --log-cli-level=INFO"
log_cli = true
log_cli_format = "%(message)s"
markers = [
    "integration: mark test as integration test",
]
